# AkRender

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
cmake/: AkRenderConfig.cmake.in  Dependencies.cmake  FindSlang.cmake  SlangShader.cmake  SlangShaderCompiler.cmake
docs/: shader-build-system-design.md
examples/simple_triangle/: CMakeLists.txt  vcpkg.json
examples/simple_triangle/src/: main.cpp
include/AkRender/: Render.hpp
shaders/: CMakeLists.txt  pbr.frag.slang  pbr.vert.slang  pbr_brdf.slang  triangle.frag.slang  triangle.vert.slang
src/: CMakeLists.txt  Render.cpp
src/Core/: CMakeLists.txt  Core.cpp
src/rhi/: VulkanContext.hpp
src/shader/: ShaderManager.cpp  ShaderManager.hpp
tools/ShaderSet/: CMakeLists.txt  README.md
tools/ShaderSet/cmake/: AkRenderShaderSetConfig.cmake.in  AssertFileExists.cmake  ShaderSetGenerator.cmake
tools/ShaderSet/include/AkRender/ShaderSet/: ShaderDescriptor.hpp  ShaderSet.hpp  ShaderSetRuntime.hpp  SlangJIT.hpp  VirtualFileSystem.hpp
tools/ShaderSet/include/AkRender/ShaderSetGenerator/: EmbedBatch.hpp  Manifest.hpp  ManifestCompile.hpp  ManifestEntry.inc  ManifestRefs.hpp  ManifestRegister.hpp  ModuleBuilder.hpp  PathMapping.hpp  RegisterInternals.hpp  RegisterPipeline.hpp  ShaderCompiler.hpp  SlangBuilder.hpp  SpirVFileBuilder.hpp  Validate.hpp  VfsPlacement.hpp  VirtualPath.hpp
tools/ShaderSet/include/AkRender/SlangJIT/: SlangCompileSession.hpp  SlangJIT.hpp
tools/ShaderSet/src/ShaderSet/: ShaderDescriptor.cpp  ShaderSetRuntime.cpp
tools/ShaderSet/src/ShaderSetGenerator/: EmbedBatch.cpp  Generator.cpp  Manifest.cpp  ManifestCompile.cpp  ManifestRegister.cpp  ModuleBuilder.cpp  PathMapping.cpp  RegisterInternals.cpp  SlangBuilder.cpp  SpirVFileBuilder.cpp  Validate.cpp  VfsPlacement.cpp  VirtualPath.cpp
tools/ShaderSet/src/SlangJIT/: SlangCompileSession.cpp  SlangJIT.cpp
tools/ShaderSet/template/: ShaderSet.cpp.inja  ShaderSet.hpp.inja
tools/ShaderSet/tests/: BuilderTest.cpp  DepfileTest.cpp  EmbedBatchTest.cpp  GeneratorTest.cpp  ManifestRegisterTest.cpp  ManifestTest.cpp  PathMappingTest.cpp  ShaderCompileTest.cpp  ShaderDescriptorTest.cpp  ShaderSetRuntimeTest.cpp  ValidateTest.cpp  VfsPlacementTest.cpp  VirtualFileSystemTest.cpp  VirtualPathTest.cpp
tools/ShaderSet/tests/GeneratorExample/: binary-resource.txt  manifest.cpp
tools/ShaderSet/tests/ShaderCompileExample/: manifest.cpp
tools/ShaderSet/tests/ShaderCompileExample/shaders/: math_utils.slang  triangle.slang
tools/ShaderSet/tests/TreeExample/tree/: root.txt
tools/Shaders/: CMakeLists.txt
tools/Shaders/include/AkRender/ShaderSetGenerator/: Manifest.hpp
tools/Shaders/include/AkRender/Shaders/: ShaderDescriptor.hpp  ShaderSet.hpp  VirtualFileSystem.hpp
tools/Shaders/src/ShaderSetGenerator/: Manifest.cpp
tools/Shaders/tests/: VirtualFileSystemTest.cpp
